# agentic_data_platform

./: .gitignore
.github/workflows/: deploy-foundation.yml  deploy-phase2.yml  deploy-phase2a.yml  deploy-phase2b.yml  deploy-phase3.yml  deploy-phase4.yml  destroy-foundation.yml
AWS/: IAMpolicy.json  iamtrust.json
data/: events.json  events27.json
localenv/: .pre-commit-config.yaml  run-checks.bat
src/: pyproject.toml
src/agent/: Dockerfile  graph.py  main.py  nodes.py  pyproject.toml  state.py  task-definition.json
src/agent/config/: settings.py
src/agent/core/: exceptions.py  logger.py
src/agent/integrations/: aws_athena.py  aws_glue.py  llm_bedrock.py
src/api/: Dockerfile  main.py
src/api/routers/: query_router.py
src/api/utils/: auth.py  bedrock_client.py
src/dashboard/: Dockerfile  app.py
src/lambda/ingest_trigger/: lambda_function.py  requirements.txt
src/spark/: Dockerfile  raw_to_iceberg.py
src/ui/: Dockerfile  app.py
src/ui/components/: chat_interface.py  data_visualizer.py
src/ui/config/: settings.py
terraform/modules/alb/: main.tf  outputs.tf  variables.tf
terraform/modules/athena/: main.tf  outputs.tf  variables.tf
terraform/modules/dynamodb_state/: main.tf  outputs.tf  variables.tf
terraform/modules/ecs_fargate/: iam.tf  main.tf  outputs.tf  variables.tf
terraform/modules/kms/: main.tf  (+2 more)
tests/: conftest.py
tests/integration/: test_athena_executor.py  test_aws_repositories.py
tests/terratest/: foundation_test.go
tests/unit/: test_auth.py  test_graph_logic.py  test_langgraph_smoke.py  test_validate_sql.py
(+58 files in other folders)
