[project]
name = "ai-dq-agent"
version = "0.1.0"
description = "Enterprise AI-Driven Data Quality and Cataloging Agent"
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=0.1.0",
    "langchain-aws>=0.1.0",
    "langgraph>=0.0.30",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "boto3>=1.34.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
    "snowflake-snowpark-python>=1.12.0",
    "pyspark>=3.5.0",
    "dbt-core>=1.7.0",
    "confluent-kafka>=2.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "moto[glue,athena]>=5.0.0",
    "mypy>=1.9.0",
    "ruff>=0.3.0",
    "pre-commit>=3.6.0",
    "types-boto3[essential]>=1.43.47",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "ARG"]
ignore = ["G004"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
implicit_reexport = false
exclude = ["tests/"]
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "moto.*", 
    "boto3.*", 
    "botocore.*", 
    "langchain_aws.*",
    "snowflake.*",
    "pyspark.*",
    "dbt.*",
    "confluent_kafka.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"
pythonpath = ["."]